[gd_scene load_steps=6 format=3 uid="uid://de74jipsmjoxb"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_4wtbe"]
[ext_resource type="PackedScene" uid="uid://7yqbsnibq45l" path="res://Sprites/Player.aseprite" id="2_n0ka6"]
[ext_resource type="PackedScene" uid="uid://cw8ev3ytdtau2" path="res://Sprites/Bow.aseprite" id="3_4qxt2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ot13"]
size = Vector2(20, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xjj3f"]
size = Vector2(30, 21)

[node name="Player" type="CharacterBody2D"]
texture_filter = 3
script = ExtResource("1_4wtbe")

[node name="Camera2D" type="Camera2D" parent="."]
texture_filter = 1
zoom = Vector2(1.2, 1.2)
limit_left = -2390
limit_top = -1000
limit_right = 2390
limit_bottom = 1000

[node name="Player" parent="." instance=ExtResource("2_n0ka6")]
position = Vector2(-1.19209e-07, 5.96046e-08)
scale = Vector2(2.5, 2.5)
animation = &"Dance"

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2(0, 18)
shape = SubResource("RectangleShape2D_8ot13")

[node name="Head" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_xjj3f")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -41.0
offset_top = -53.0
offset_right = 41.0
offset_bottom = -39.0
show_percentage = false

[node name="Timers" type="Node2D" parent="."]

[node name="HealTimer" type="Timer" parent="Timers"]
wait_time = 0.4

[node name="FireRate" type="Timer" parent="Timers"]

[node name="Recovery" type="Timer" parent="Timers"]

[node name="Bow" type="Node2D" parent="."]

[node name="Bow" parent="Bow" instance=ExtResource("3_4qxt2")]
position = Vector2(21, 1)
scale = Vector2(1.6, 1.6)

[node name="position" type="Marker2D" parent="Bow"]
position = Vector2(36, 0)

[node name="direction" type="Marker2D" parent="Bow"]
position = Vector2(90, 0)

[connection signal="timeout" from="Timers/HealTimer" to="." method="_on_heal_timer_timeout"]
[connection signal="timeout" from="Timers/FireRate" to="." method="_on_fire_rate_timeout"]
[connection signal="timeout" from="Timers/Recovery" to="." method="_on_recovery_timeout"]
